generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["relationJoins"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator kysely {
  provider     = "prisma-kysely"
  fileName     = "types.ts"
  enumFileName = "enums.ts"
}

model User {
  id Int @id @default(autoincrement())

  givenName  String
  familyName String?

  email        String @unique
  passwordHash String

  createdAt DateTime @default(now())

  Transaction Transaction[]
  Category    Category[]
  // SavingsGoal SavingsGoal[]

  Filter Filter[]
}

model Category {
  id   Int    @id @default(autoincrement())
  name String

  color String // preset color options from the frontend
  icon  String // preset icon options from the frontend

  // spendingLimit Int? // in cents
  // spendingLimitCurrency String? @default("EUR")

  createdAt DateTime @default(now())

  Transaction Transaction[]

  userId Int
  user   User @relation(fields: [userId], references: [id], onDelete: Cascade)
  filterCategories FilterCategory[]
}

enum TransactionType {
  INCOME
  EXPENSE
}


 enum RecurringTransactionType {
  DAILY
  WEEKLY
  MONTHLY
}


model Transaction {
  id Int @id @default(autoincrement())

  type TransactionType @default(EXPENSE)

  amount      Int
  description String?
  currency    String  @default("EUR")

  createdAt DateTime @default(now())

  userId Int
  user   User @relation(fields: [userId], references: [id], onDelete: Cascade)

  Category   Category? @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  categoryId Int?

  isRecurring Boolean @default(false)

  recurringType RecurringTransactionType? 
  recurringBaseInterval Int? // 1x Monthly ; 2x Monthly ; etc.
  recurringDisabled Boolean? 

  childTransaction  Transaction[] @relation("childTransaction")
  parentTransaction Transaction?  @relation("childTransaction", fields: [transactionId], references: [id], onDelete: SetNull)
  transactionId     Int?

  // TODO: better  recurring interval
}

// model SavingsGoal {
//   id Int @id @default(autoincrement())

//   name        String
//   description String?

//   amount   Int // in cents
//   currency String @default("EUR")

//   createdAt DateTime @default(now())

//   userId Int
//   user   User @relation(fields: [userId], references: [id])
// }

model Filter {
  id          Int       @id @default(autoincrement())
  title       String
  icon        String?
  minPrice    Int?
  maxPrice    Int?
  dateFrom    DateTime?
  dateTo      DateTime?
  searchText  String?
  transactionType TransactionType?
  sortOption FilterSortOption? @default(NEWEST_FIRST)
  userId      Int
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  filterCategories FilterCategory[]
}

enum FilterSortOption {
  HIGHEST_AMOUNT
  LOWEST_AMOUNT
  NEWEST_FIRST
  OLDEST_FIRST
}

model FilterCategory {
  filterId   Int
  categoryId Int
  filter     Filter   @relation(fields: [filterId], references: [id], onDelete: Cascade)
  category   Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@id([filterId, categoryId])
}
